test/bad/functions/variadic07.px

func f(...args: [Int]) def
    return

f(args={3})
